--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "fastify": "^4.27.0",
+    "@fastify/cors": "^10.1.0",
+    "fastify": "^5",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7"
   },
